# tizenbrew-device-manager

./: README.md  package-lock.json  package.json
.github/workflows/: build.yaml
src/: App.jsx  MainEntry.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb_client_cmd.rs  lib.rs  main.rs
src/components/: AdbClient.js  GlobalContext.jsx  MobileNavBar.jsx  Modal.jsx  Navigation.jsx  Throbber.jsx
src/pages/: Apps.jsx  ConnectDevice.jsx  DeviceInfo.jsx  Main.jsx
